seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/output/SeqWareQueryLanguageParser.java
// $ANTLR 3.4 /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g 2013-10-03 15:34:11

package com.github.seqware.queryengine.kernel.output;


import org.antlr.runtime.*;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SeqWareQueryLanguageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BRACKET_CLOSE", "BRACKET_OPEN", "COMMENT_EOL", "COMMENT_INLINE", "EQUALS", "FLOAT", "GT", "GTEQ", "ID", "INT", "LT", "LTEQ", "NAMED_CONSTANT", "NAMED_FUNCTION", "NAMED_THREE_PARAM_PREDICATE", "NAMED_TWO_PARAM_PREDICATE", "NOT", "NOTEQUALS", "NULL", "OR", "STRING", "WHITESPACE", "','"
    };

    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int AND=4;
    public static final int BRACKET_CLOSE=5;
    public static final int BRACKET_OPEN=6;
    public static final int COMMENT_EOL=7;
    public static final int COMMENT_INLINE=8;
    public static final int EQUALS=9;
    public static final int FLOAT=10;
    public static final int GT=11;
    public static final int GTEQ=12;
    public static final int ID=13;
    public static final int INT=14;
    public static final int LT=15;
    public static final int LTEQ=16;
    public static final int NAMED_CONSTANT=17;
    public static final int NAMED_FUNCTION=18;
    public static final int NAMED_THREE_PARAM_PREDICATE=19;
    public static final int NAMED_TWO_PARAM_PREDICATE=20;
    public static final int NOT=21;
    public static final int NOTEQUALS=22;
    public static final int NULL=23;
    public static final int OR=24;
    public static final int STRING=25;
    public static final int WHITESPACE=26;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SeqWareQueryLanguageParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SeqWareQueryLanguageParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SeqWareQueryLanguageParser.tokenNames; }
    public String getGrammarFileName() { return "/home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g"; }


    public static class query_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "query"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:20:1: query : low_precedence_constraint ^ EOF !;
    public final SeqWareQueryLanguageParser.query_return query() throws RecognitionException {
        SeqWareQueryLanguageParser.query_return retval = new SeqWareQueryLanguageParser.query_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2=null;
        SeqWareQueryLanguageParser.low_precedence_constraint_return low_precedence_constraint1 =null;


        CommonTree EOF2_tree=null;

        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:21:2: ( low_precedence_constraint ^ EOF !)
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:21:4: low_precedence_constraint ^ EOF !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_low_precedence_constraint_in_query75);
            low_precedence_constraint1=low_precedence_constraint();

            state._fsp--;

            root_0 = (CommonTree)adaptor.becomeRoot(low_precedence_constraint1.getTree(), root_0);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_query78); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "query"


    public static class low_precedence_constraint_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "low_precedence_constraint"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:24:1: low_precedence_constraint : ( high_precedence_constraint ) ( OR ^ high_precedence_constraint )* ;
    public final SeqWareQueryLanguageParser.low_precedence_constraint_return low_precedence_constraint() throws RecognitionException {
        SeqWareQueryLanguageParser.low_precedence_constraint_return retval = new SeqWareQueryLanguageParser.low_precedence_constraint_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token OR4=null;
        SeqWareQueryLanguageParser.high_precedence_constraint_return high_precedence_constraint3 =null;

        SeqWareQueryLanguageParser.high_precedence_constraint_return high_precedence_constraint5 =null;


        CommonTree OR4_tree=null;

        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:25:2: ( ( high_precedence_constraint ) ( OR ^ high_precedence_constraint )* )
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:25:4: ( high_precedence_constraint ) ( OR ^ high_precedence_constraint )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:25:4: ( high_precedence_constraint )
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:25:5: high_precedence_constraint
            {
            pushFollow(FOLLOW_high_precedence_constraint_in_low_precedence_constraint91);
            high_precedence_constraint3=high_precedence_constraint();

            state._fsp--;

            adaptor.addChild(root_0, high_precedence_constraint3.getTree());

            }


            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:25:33: ( OR ^ high_precedence_constraint )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:25:34: OR ^ high_precedence_constraint
            	    {
            	    OR4=(Token)match(input,OR,FOLLOW_OR_in_low_precedence_constraint95); 
            	    OR4_tree = 
            	    (CommonTree)adaptor.create(OR4)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(OR4_tree, root_0);


            	    pushFollow(FOLLOW_high_precedence_constraint_in_low_precedence_constraint98);
            	    high_precedence_constraint5=high_precedence_constraint();

            	    state._fsp--;

            	    adaptor.addChild(root_0, high_precedence_constraint5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "low_precedence_constraint"


    public static class high_precedence_constraint_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "high_precedence_constraint"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:28:1: high_precedence_constraint : ( nested_constraint ) ( AND ^ nested_constraint )* ;
    public final SeqWareQueryLanguageParser.high_precedence_constraint_return high_precedence_constraint() throws RecognitionException {
        SeqWareQueryLanguageParser.high_precedence_constraint_return retval = new SeqWareQueryLanguageParser.high_precedence_constraint_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token AND7=null;
        SeqWareQueryLanguageParser.nested_constraint_return nested_constraint6 =null;

        SeqWareQueryLanguageParser.nested_constraint_return nested_constraint8 =null;


        CommonTree AND7_tree=null;

        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:29:2: ( ( nested_constraint ) ( AND ^ nested_constraint )* )
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:29:4: ( nested_constraint ) ( AND ^ nested_constraint )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:29:4: ( nested_constraint )
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:29:5: nested_constraint
            {
            pushFollow(FOLLOW_nested_constraint_in_high_precedence_constraint113);
            nested_constraint6=nested_constraint();

            state._fsp--;

            adaptor.addChild(root_0, nested_constraint6.getTree());

            }


            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:29:24: ( AND ^ nested_constraint )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:29:25: AND ^ nested_constraint
            	    {
            	    AND7=(Token)match(input,AND,FOLLOW_AND_in_high_precedence_constraint117); 
            	    AND7_tree = 
            	    (CommonTree)adaptor.create(AND7)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(AND7_tree, root_0);


            	    pushFollow(FOLLOW_nested_constraint_in_high_precedence_constraint120);
            	    nested_constraint8=nested_constraint();

            	    state._fsp--;

            	    adaptor.addChild(root_0, nested_constraint8.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "high_precedence_constraint"


    public static class nested_constraint_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "nested_constraint"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:32:1: nested_constraint : ( ( NOT ^)? BRACKET_OPEN ! low_precedence_constraint BRACKET_CLOSE !| constraint );
    public final SeqWareQueryLanguageParser.nested_constraint_return nested_constraint() throws RecognitionException {
        SeqWareQueryLanguageParser.nested_constraint_return retval = new SeqWareQueryLanguageParser.nested_constraint_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NOT9=null;
        Token BRACKET_OPEN10=null;
        Token BRACKET_CLOSE12=null;
        SeqWareQueryLanguageParser.low_precedence_constraint_return low_precedence_constraint11 =null;

        SeqWareQueryLanguageParser.constraint_return constraint13 =null;


        CommonTree NOT9_tree=null;
        CommonTree BRACKET_OPEN10_tree=null;
        CommonTree BRACKET_CLOSE12_tree=null;

        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:33:2: ( ( NOT ^)? BRACKET_OPEN ! low_precedence_constraint BRACKET_CLOSE !| constraint )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==BRACKET_OPEN||LA4_0==NOT) ) {
                alt4=1;
            }
            else if ( (LA4_0==FLOAT||(LA4_0 >= ID && LA4_0 <= INT)||(LA4_0 >= NAMED_CONSTANT && LA4_0 <= NAMED_TWO_PARAM_PREDICATE)||LA4_0==NULL||LA4_0==STRING) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:33:4: ( NOT ^)? BRACKET_OPEN ! low_precedence_constraint BRACKET_CLOSE !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:33:4: ( NOT ^)?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==NOT) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:33:5: NOT ^
                            {
                            NOT9=(Token)match(input,NOT,FOLLOW_NOT_in_nested_constraint135); 
                            NOT9_tree = 
                            (CommonTree)adaptor.create(NOT9)
                            ;
                            root_0 = (CommonTree)adaptor.becomeRoot(NOT9_tree, root_0);


                            }
                            break;

                    }


                    BRACKET_OPEN10=(Token)match(input,BRACKET_OPEN,FOLLOW_BRACKET_OPEN_in_nested_constraint140); 

                    pushFollow(FOLLOW_low_precedence_constraint_in_nested_constraint143);
                    low_precedence_constraint11=low_precedence_constraint();

                    state._fsp--;

                    adaptor.addChild(root_0, low_precedence_constraint11.getTree());

                    BRACKET_CLOSE12=(Token)match(input,BRACKET_CLOSE,FOLLOW_BRACKET_CLOSE_in_nested_constraint145); 

                    }
                    break;
                case 2 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:34:4: constraint
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_constraint_in_nested_constraint151);
                    constraint13=constraint();

                    state._fsp--;

                    adaptor.addChild(root_0, constraint13.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "nested_constraint"


    public static class constraint_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "constraint"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:38:1: constraint : ( identifier comparison ^ constant | constant comparison ^ identifier | two_param_predicate | three_param_predicate );
    public final SeqWareQueryLanguageParser.constraint_return constraint() throws RecognitionException {
        SeqWareQueryLanguageParser.constraint_return retval = new SeqWareQueryLanguageParser.constraint_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        SeqWareQueryLanguageParser.identifier_return identifier14 =null;

        SeqWareQueryLanguageParser.comparison_return comparison15 =null;

        SeqWareQueryLanguageParser.constant_return constant16 =null;

        SeqWareQueryLanguageParser.constant_return constant17 =null;

        SeqWareQueryLanguageParser.comparison_return comparison18 =null;

        SeqWareQueryLanguageParser.identifier_return identifier19 =null;

        SeqWareQueryLanguageParser.two_param_predicate_return two_param_predicate20 =null;

        SeqWareQueryLanguageParser.three_param_predicate_return three_param_predicate21 =null;



        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:39:2: ( identifier comparison ^ constant | constant comparison ^ identifier | two_param_predicate | three_param_predicate )
            int alt5=4;
            switch ( input.LA(1) ) {
            case ID:
            case NAMED_FUNCTION:
                {
                alt5=1;
                }
                break;
            case FLOAT:
            case INT:
            case NAMED_CONSTANT:
            case NULL:
            case STRING:
                {
                alt5=2;
                }
                break;
            case NAMED_TWO_PARAM_PREDICATE:
                {
                alt5=3;
                }
                break;
            case NAMED_THREE_PARAM_PREDICATE:
                {
                alt5=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:39:4: identifier comparison ^ constant
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_identifier_in_constraint163);
                    identifier14=identifier();

                    state._fsp--;

                    adaptor.addChild(root_0, identifier14.getTree());

                    pushFollow(FOLLOW_comparison_in_constraint165);
                    comparison15=comparison();

                    state._fsp--;

                    root_0 = (CommonTree)adaptor.becomeRoot(comparison15.getTree(), root_0);

                    pushFollow(FOLLOW_constant_in_constraint168);
                    constant16=constant();

                    state._fsp--;

                    adaptor.addChild(root_0, constant16.getTree());

                    }
                    break;
                case 2 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:40:4: constant comparison ^ identifier
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_constant_in_constraint173);
                    constant17=constant();

                    state._fsp--;

                    adaptor.addChild(root_0, constant17.getTree());

                    pushFollow(FOLLOW_comparison_in_constraint175);
                    comparison18=comparison();

                    state._fsp--;

                    root_0 = (CommonTree)adaptor.becomeRoot(comparison18.getTree(), root_0);

                    pushFollow(FOLLOW_identifier_in_constraint178);
                    identifier19=identifier();

                    state._fsp--;

                    adaptor.addChild(root_0, identifier19.getTree());

                    }
                    break;
                case 3 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:41:4: two_param_predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_two_param_predicate_in_constraint183);
                    two_param_predicate20=two_param_predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, two_param_predicate20.getTree());

                    }
                    break;
                case 4 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:42:5: three_param_predicate
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_three_param_predicate_in_constraint189);
                    three_param_predicate21=three_param_predicate();

                    state._fsp--;

                    adaptor.addChild(root_0, three_param_predicate21.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "constraint"


    public static class identifier_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "identifier"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:45:1: identifier : ( ID | key_value_function );
    public final SeqWareQueryLanguageParser.identifier_return identifier() throws RecognitionException {
        SeqWareQueryLanguageParser.identifier_return retval = new SeqWareQueryLanguageParser.identifier_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ID22=null;
        SeqWareQueryLanguageParser.key_value_function_return key_value_function23 =null;


        CommonTree ID22_tree=null;

        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:46:2: ( ID | key_value_function )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID) ) {
                alt6=1;
            }
            else if ( (LA6_0==NAMED_FUNCTION) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:46:4: ID
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    ID22=(Token)match(input,ID,FOLLOW_ID_in_identifier200); 
                    ID22_tree = 
                    (CommonTree)adaptor.create(ID22)
                    ;
                    adaptor.addChild(root_0, ID22_tree);


                    }
                    break;
                case 2 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:47:5: key_value_function
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_key_value_function_in_identifier206);
                    key_value_function23=key_value_function();

                    state._fsp--;

                    adaptor.addChild(root_0, key_value_function23.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "identifier"


    public static class comparison_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "comparison"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:50:1: comparison : ( EQUALS | NOTEQUALS | LT | LTEQ | GT | GTEQ );
    public final SeqWareQueryLanguageParser.comparison_return comparison() throws RecognitionException {
        SeqWareQueryLanguageParser.comparison_return retval = new SeqWareQueryLanguageParser.comparison_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token set24=null;

        CommonTree set24_tree=null;

        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:51:2: ( EQUALS | NOTEQUALS | LT | LTEQ | GT | GTEQ )
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:
            {
            root_0 = (CommonTree)adaptor.nil();


            set24=(Token)input.LT(1);

            if ( input.LA(1)==EQUALS||(input.LA(1) >= GT && input.LA(1) <= GTEQ)||(input.LA(1) >= LT && input.LA(1) <= LTEQ)||input.LA(1)==NOTEQUALS ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(set24)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "comparison"


    public static class constant_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "constant"
    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:54:1: constant : ( literal | NAMED_CONSTANT );
    public final SeqWareQueryLanguageParser.constant_return constant() throws RecognitionException {
        SeqWareQueryLanguageParser.constant_return retval = new SeqWareQueryLanguageParser.constant_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NAMED_CONSTANT26=null;
        SeqWareQueryLanguageParser.literal_return literal25 =null;


        CommonTree NAMED_CONSTANT26_tree=null;

        try {
            // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:55:2: ( literal | NAMED_CONSTANT )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==FLOAT||LA7_0==INT||LA7_0==NULL||LA7_0==STRING) ) {
                alt7=1;
            }
            else if ( (LA7_0==NAMED_CONSTANT) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // /home/dyuen/queryengine/seqware-queryengine-backend/src/main/java/com/github/seqware/queryengine/kernel/SeqWareQueryLanguage.g:55:4: literal
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_literal_in_constant249);
                    literal25=literal();

                    state._fsp--;

                    adaptor.addChild(root_0, literal25.getTree());
